Scale header height with vw units to prevent text overflow

--- a/css/modules/_variables.scss
+++ b/css/modules/_variables.scss
@@ -21,7 +21,7 @@ $space-huge   : 80px;
 
 $gutter: 20px;
 
-$header-height: 60px;
+$header-height: 3.4vw;
 $header-height-mobile: 50px;
 
 $site-high-z-index: 2000;
